[tool.poetry]
name = "sedls"
version = "0.1.0"
description = "Repo for Exploratory Text Analysis with Python workshop at South-East Data Librarian Symposium 2020"
authors = ["Scott Bailey <csb5t@virginia.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.8"
spacy = "^2.3.2"
pandas = "^1.1.2"
textacy = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
